fixed spacing issues in lets connect section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,7 @@ h3:hover {
 
     .contact-h2 {
         font-size: 65px;
+        margin: 45px 0px 90px 0px;
     }
 
     .edx-logo {
@@ -404,7 +405,7 @@ h3:hover {
     }
 
     .top-a {
-        margin: 52px auto;
+        margin: 120px auto 60px;
         padding-bottom: 21px;
     }
 
